emoji分场景返回不同值